[gd_scene load_steps=13 format=3 uid="uid://cbllnrwg3lq6s"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_m6d2t"]
[ext_resource type="Texture2D" uid="uid://b4p0v10neafsx" path="res://assets/Mammon.png" id="2_gg288"]
[ext_resource type="Texture2D" uid="uid://y6a6xmq34syq" path="res://assets/background2.png" id="2_j5oyh"]
[ext_resource type="Texture2D" uid="uid://c1unyrybd1k2u" path="res://assets/player.png" id="4_2jsyq"]
[ext_resource type="Texture2D" uid="uid://chy6uvpkfrocg" path="res://assets/2.png" id="5_u4j84"]
[ext_resource type="Texture2D" uid="uid://btopifhnvfet4" path="res://assets/3.png" id="6_7x4hg"]
[ext_resource type="PackedScene" uid="uid://djgk3ehy4e8a0" path="res://scenes/pause_menu.tscn" id="7_ofre3"]
[ext_resource type="PackedScene" uid="uid://c4s1t1i8nb8vg" path="res://scenes/game_over.tscn" id="8_xs1hi"]

[sub_resource type="SystemFont" id="SystemFont_j7n0b"]
font_names = PackedStringArray("Joystix Monospace")

[sub_resource type="SystemFont" id="SystemFont_cnswa"]
font_names = PackedStringArray("Joystix Monospace")

[sub_resource type="SystemFont" id="SystemFont_juk1w"]
font_names = PackedStringArray("Joystix Monospace")

[sub_resource type="SystemFont" id="SystemFont_i6noj"]
font_names = PackedStringArray("Joystix Monospace")

[node name="table4_4" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m6d2t")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j5oyh")
expand_mode = 2
stretch_mode = 6

[node name="tablegrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -254.0
offset_right = 485.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 57.0
offset_top = 40.0
offset_right = 147.0
offset_bottom = 123.0
texture = ExtResource("2_gg288")
stretch_mode = 5

[node name="Player2" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 59.0
offset_top = 322.0
offset_right = 147.0
offset_bottom = 409.0
texture = ExtResource("4_2jsyq")
stretch_mode = 5

[node name="CardOptions4" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="CardOptions4"]
texture_filter = 1
custom_minimum_size = Vector2(300, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -16.0
offset_right = 34.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="spade" type="TextureButton" parent="CardOptions4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_u4j84")
stretch_mode = 6

[node name="heart" type="TextureButton" parent="CardOptions4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("6_7x4hg")
stretch_mode = 6

[node name="Player" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 35.0
offset_top = 407.0
offset_right = 167.0
offset_bottom = 525.0
size_flags_horizontal = 7
size_flags_vertical = 5

[node name="Score" type="Label" parent="Player"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("SystemFont_j7n0b")
theme_override_font_sizes/font_size = 36
text = "##"
horizontal_alignment = 1
vertical_alignment = 3

[node name="Title" type="Label" parent="Player"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("SystemFont_cnswa")
text = "PLAYER"
horizontal_alignment = 1

[node name="Opponent" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 37.0
offset_top = 121.0
offset_right = 164.0
offset_bottom = 233.0
size_flags_horizontal = 7

[node name="Score" type="Label" parent="Opponent"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("SystemFont_juk1w")
theme_override_font_sizes/font_size = 36
text = "##"
horizontal_alignment = 1

[node name="Title" type="Label" parent="Opponent"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("SystemFont_i6noj")
text = "MANNI"
horizontal_alignment = 1

[node name="PauseMenu" type="CanvasLayer" parent="."]
visible = false

[node name="PauseMenu" parent="PauseMenu" instance=ExtResource("7_ofre3")]
process_mode = 3

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false

[node name="GameOver" parent="GameOver" instance=ExtResource("8_xs1hi")]
process_mode = 3
