[gd_scene load_steps=13 format=3 uid="uid://c7cylj1t0xbbx"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_tfmha"]
[ext_resource type="Texture2D" uid="uid://bqe3pm623mivb" path="res://assets/background.png" id="2_0i5so"]
[ext_resource type="Texture2D" uid="uid://b4p0v10neafsx" path="res://assets/Mammon.png" id="3_fuhjk"]
[ext_resource type="Texture2D" uid="uid://cncbdjowu6tud" path="res://assets/1.png" id="4_t3guu"]
[ext_resource type="Texture2D" uid="uid://chy6uvpkfrocg" path="res://assets/2.png" id="5_n8ill"]
[ext_resource type="Texture2D" uid="uid://btopifhnvfet4" path="res://assets/3.png" id="6_jrn6m"]
[ext_resource type="PackedScene" uid="uid://djgk3ehy4e8a0" path="res://scenes/pause_menu.tscn" id="7_xxqia"]
[ext_resource type="PackedScene" uid="uid://c4s1t1i8nb8vg" path="res://scenes/game_over.tscn" id="8_ktmew"]

[sub_resource type="Gradient" id="Gradient_dvro2"]
offsets = PackedFloat32Array(0, 0.32973, 0.686486, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.235543, 0.028682, 0, 1, 0.235294, 0.027451, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ff7a6"]
gradient = SubResource("Gradient_dvro2")

[sub_resource type="SystemFont" id="SystemFont_88tvj"]
font_names = PackedStringArray("Joystix Monospace")

[sub_resource type="Theme" id="Theme_58dmx"]
default_font = SubResource("SystemFont_88tvj")

[node name="table6_4" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tfmha")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ff7a6")
expand_mode = 3

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 2
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -306.0
offset_right = 306.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0i5so")
stretch_mode = 6

[node name="tablegrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -128.0
offset_right = 232.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
columns = 6

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 16.0
offset_right = 70.0
offset_bottom = 156.0
grow_horizontal = 2
texture = ExtResource("3_fuhjk")
stretch_mode = 5

[node name="CardOptions4" type="Popup" parent="."]
process_mode = 3
initial_position = 2
size = Vector2i(450, 150)
content_scale_mode = 1
content_scale_aspect = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CardOptions4"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="club" type="TextureButton" parent="CardOptions4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_t3guu")
stretch_mode = 6

[node name="spade" type="TextureButton" parent="CardOptions4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_n8ill")
stretch_mode = 6

[node name="heart" type="TextureButton" parent="CardOptions4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("6_jrn6m")
stretch_mode = 6

[node name="Players_Life" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -289.0
offset_top = -102.0
offset_right = 289.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_58dmx")
theme_override_constants/separation = 0

[node name="Player" type="VBoxContainer" parent="Players_Life"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5

[node name="Title" type="Label" parent="Players_Life/Player"]
layout_mode = 2
text = "PLAYER'S LIFE"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Players_Life/Player"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "##"
horizontal_alignment = 1
vertical_alignment = 3

[node name="Opponent" type="VBoxContainer" parent="Players_Life"]
layout_mode = 2
size_flags_horizontal = 7

[node name="Title" type="Label" parent="Players_Life/Opponent"]
layout_mode = 2
text = "MANI'S LIFE"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Players_Life/Opponent"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "##"
horizontal_alignment = 1

[node name="PauseMenu" type="CanvasLayer" parent="."]
visible = false

[node name="PauseMenu" parent="PauseMenu" instance=ExtResource("7_xxqia")]
process_mode = 3

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false

[node name="GameOver" parent="GameOver" instance=ExtResource("8_ktmew")]
process_mode = 3
